--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla&family=Montserrat&display=swap');
 @import "tailwindcss";
 
-:root {
+@theme {
+  --font-karla: 'Karla', sans-serif;
+  --font-montserrat: 'Montserrat', sans-serif;
+  --color-primary-600: #3F697B;
+  --color-base-white: #FFFFFF;
+  --color-neutral-300: #D0D5DD;
+  --color-accent-400: #D6B139;
+  
+}
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -23,4 +39,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
