--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 @theme {
   --font-karla: 'Karla', sans-serif;
   --font-montserrat: 'Montserrat', sans-serif;
+  --color-primary-300: #C1D9E0;
   --color-primary-500: #487E92;
   --color-primary-600: #3F697B;
   --color-base-white: #FFFFFF;
