--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;500;600;700;800&family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
 @import "tailwindcss";
 
 
@@ -7,9 +7,6 @@
   /* ==== BASE COLORS ==== */
   --color-white: #FFFFFF;
   --color-black: #000000;
-
-  /* ==== TEXT COLORS ==== */
-  --color-text-primary: #101828;
 
   /* ==== GRAY SCALE ==== */
   --color-gray-25:  #FCFCFD;
