--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;500;600;700;800&family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
 @import "tailwindcss";
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 
 @theme {
   /* 🎨 Кольори */
