--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,6 @@ body {
   padding: 0;
 }
 
-
 @theme {
   /* 🎨 Кольори */
   /* ==== BASE COLORS ==== */
@@ -78,6 +77,10 @@ body {
   /* ==== FONTS ==== */
   --font-montserrat: "Montserrat", sans-serif;
   --font-karla: "Karla", sans-serif;
+
+  /* ==== SHADOWS ==== */
+  --shadow-social-button: 0px 0px 0px 4px #F2F4F7, 0px 1px 2px 0px #1018280D;
+  --shadow-input: 0px 0px 0px 4px #DEEBEF;
 
 }
 
