feat(auth/reset-password): implement forgot password page and styling updates
- Added  page with Axios for API communication
- Installed  and  for HTTP requests and JWT handling
- Updated global styles with green color variables in  for the message (green success label in Figma)
- Linked forgot password page from  and  pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,11 @@ body {
   --color-accent-800: #724921;
   --color-accent-900: #623E21;
 
+    /* ==== SUCCESS ==== */
+  --color-custom-success-50:  #ECFDF3;
+  --color-custom-success-100: #D1FADF;
+  --color-custom-success-500: #027A48; 
+
   /* ==== BRAND SHORTCUT ==== */
   --color-brand-primary: #4A3AFF;
 
